fix balance section overflowing

--- a/src/sections/balance-section/balance-section.module.css
+++ b/src/sections/balance-section/balance-section.module.css
@@ -7,6 +7,16 @@
   margin-bottom: var(--space-xlg);
 }
 
+.balanceWrapper {
+  width: 100%;
+}
+
+.balance {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: 100%;
+}
+
 .list {
   display: flex;
   gap: var(--space-lg);
